<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/tasks" />
    <item
        android:id="@+id/nav_add_task"
        android:icon="@drawable/ic_add"
        android:title="@string/add_task" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_documents"
        android:icon="@drawable/ic_documents"
        android:title="@string/documents" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>